[package]
name = "http-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
clap = { version = "4.5.16", features = ["derive"] }
mime_guess = "2.0.5"
tokio = { version = "1.36.0", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "net",
  "fs",
] }
tower-http = { version = "0.5.2", features = [
  "compression-full",
  "cors",
  "trace",
  "fs",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
